--- a/style.css
+++ b/style.css
@@ -2,21 +2,17 @@
 
 @import url(http://fonts.googleapis.com/css?family=PT+Serif|PT+Serif:b|PT+Serif:i|PT+Sans|PT+Sans:b);
 
-html {
-  min-width: 2500px;
-}
-
 .ocks-org body {
   background: #fcfcfa;
   color: #333;
-  font-family: "PT Serif", serif;
+  font-family: Helvetica Neue;
   margin: 1em auto 4em auto;
-  position: absolute;
+  /* position: absolute; */
   top:0px;
   bottom:0px;
   left:50px;
   right:0;
-  width: 2500px;
+  width:960;
 }
 
 .ocks-org header,
@@ -26,7 +22,7 @@ html {
 .ocks-org h2,
 .ocks-org h3,
 .ocks-org h4 {
-  font-family: "PT Sans", sans-serif;
+  font-family: Helvetica Neue;
 }
 
 .ocks-org h1,
@@ -42,59 +38,20 @@ html {
 }
 
 h1 {
-  font-size: 64px;
-  font-weight: 300;
+  font-size: 30px;
+  font-weight: bold;
   letter-spacing: -2px;
   margin: .3em 0 .1em 0;
 }
 
 h2 {
-  margin-top: 2em;
+  font-size: 16px;
+  font-weight: bold;
+  margin: .3em 0 .1em 0;
 }
 
 h1, h2 {
   text-rendering: optimizeLegibility;
-}
-
-h2 a[name],
-h2 a[id] {
-  color: #ccc;
-  left: -20px;
-  position: absolute;
-  width: 740px;
-}
-
-header,
-footer {
-  font-size: small;
-}
-
-.ocks-org header aside,
-.ocks-org footer aside {
-  float: left;
-  margin-right: .5em;
-}
-
-.ocks-org header aside:after,
-.ocks-org footer aside:after {
-  padding-left: .5em;
-  content: "/";
-}
-
-footer {
-  margin-top: 8em;
-}
-
-h1 ~ aside {
-  font-size: small;
-  right: 0;
-  position: absolute;
-  width: 180px;
-}
-
-.attribution {
-  font-size: small;
-  margin-bottom: 2em;
 }
 
 body > p, li > p {
