--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   /* position: absolute; */
   top:0%;
   bottom:0%;
-  left:2%;
+  left:0%;
   right:0;
 }
 
@@ -44,13 +44,13 @@ margin-left: auto;
 }
 
 h1 {
-  font-size: 2.7em;
+  font-size: 1.7vw;
   font-weight: bold;
   margin: .3em 0 .1em 0;
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1.2vw;
   font-weight: bold;
   margin: .3em 0 .1em 0;
 }
